<resources>
    <string name="app_name">Quick Analyse</string>
    <string name="welcome_to_quick_analyse">Welcome to Quick Analyse!</string>
    <string name="text">Text</string>
    <string name="file">File</string>
    <string name="demo">Demo</string>
    <string name="input_text_below">Input text below, or analyse the text that\'s been added for you.</string>
    <string name="enter_text_here">Enter text here</string>
    <string name="count_letters">Count letters</string>
    <string name="count_numbers">Count numbers</string>
    <string name="count_symbols">Count symbols</string>
    <string name="character_frequency">Character frequency</string>
    <string name="count_words">Count words</string>
    <string name="find_longest_word">Find longest word</string>
    <string name="word_frequency">Word frequency</string>
    <string name="results">Results:</string>
    <string name="demo_string">The 10 quick brown foxes jumped over the lazy dogs. Why? It\'s a mystery - 5 could have done it!</string>
    <string name="analyse">Analyse!</string>
    <string name="view_character_frequency">View character frequency</string>
    <string name="view_word_frequency">View word frequency</string>

    <string-array name="analyser_freq_array">
        <item>No Frequency</item>
        <item>Frequency</item>
        <item>+ Relative Frequency</item>
        <item>+ Bar Chart</item>
    </string-array>
</resources>
