<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="britt.com.quickanalyse.TextInputActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:text="@string/input_text_below"
        />

    <EditText
        android:id="@+id/analyser_user_input"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:gravity="start"
        android:hint="@string/enter_text_here"
        android:inputType="textMultiLine"
        android:text="@string/demo_string"
        android:maxHeight="300dp"
        android:textColorHint="@color/colorPrimary"/>

    <LinearLayout
        android:id="@+id/character_word_wrapper"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:orientation="horizontal"
        android:weightSum="2"
        android:baselineAligned="false">

        <LinearLayout
            android:id="@+id/character_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layoutDirection="ltr"
            android:orientation="vertical">

            <CheckBox
                android:id="@+id/analyser_chars_alpha_check"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/count_letters"/>

            <CheckBox
                android:id="@+id/analyser_chars_num_check"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/count_numbers"/>

            <CheckBox
                android:id="@+id/analyser_chars_sym_check"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/count_symbols"/>

            <Spinner
                android:id="@+id/analyser_chars_freq_spin"
                style="@style/Widget.AppCompat.Spinner.Underlined"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:entries="@array/analyser_freq_array"
                android:text="@string/character_frequency"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/word_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layoutDirection="rtl"
            android:orientation="vertical"
            android:textDirection="rtl">

            <CheckBox
                android:id="@+id/analyser_words_count_check"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/count_words"/>

            <CheckBox
                android:id="@+id/analyser_words_longest_check"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/find_longest_word"/>

            <Spinner
                android:id="@+id/analyser_words_freq_spin"
                style="@style/Widget.AppCompat.Spinner.Underlined"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:entries="@array/analyser_freq_array"
                android:layoutDirection="ltr"
                android:text="@string/word_frequency"/>
        </LinearLayout>

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="5dp"
        android:background="@color/colorPrimaryDark"/>


    <Button
        android:id="@+id/analyser_text_analyse_button"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:padding="20dp"
        android:text="@string/analyse"/>

</LinearLayout>
